openshift-installer: add configresolver flags to all non-generated jobs

--- a/ci-operator/jobs/openshift/installer/openshift-installer-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-release-4.6-presubmits.yaml
@@ -234,8 +234,12 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.6
         - --give-pr-author-access-to-namespace=true
         - --lease-server=http://boskos
+        - --org=openshift
+        - --repo=installer
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-aws-proxy-cluster-profile
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=e2e-aws-proxy
@@ -300,8 +304,12 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.6
         - --give-pr-author-access-to-namespace=true
         - --lease-server=http://boskos
+        - --org=openshift
+        - --repo=installer
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-aws-rhel8-cluster-profile
         - --target=e2e-aws-rhel8
         - --template=/usr/local/e2e-aws-rhel8
@@ -1097,7 +1105,11 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.6
         - --give-pr-author-access-to-namespace=true
+        - --org=openshift
+        - --repo=installer
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-libvirt-cluster-profile
         - --target=e2e-libvirt
         - --template=/usr/local/e2e-libvirt
@@ -1289,7 +1301,11 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.6
         - --give-pr-author-access-to-namespace=true
+        - --org=openshift
+        - --repo=installer
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-metal-cluster-profile
         - --target=e2e-metal
         - --template=/usr/local/e2e-metal
@@ -1348,8 +1364,12 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.6
         - --give-pr-author-access-to-namespace=true
         - --lease-server=http://boskos
+        - --org=openshift
+        - --repo=installer
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-openstack-cluster-profile
         - --target=e2e-openstack
         - --template=/usr/local/e2e-openstack
@@ -1409,8 +1429,12 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.6
         - --give-pr-author-access-to-namespace=true
         - --lease-server=http://boskos
+        - --org=openshift
+        - --repo=installer
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-openstack-parallel-cluster-profile
         - --target=e2e-openstack-parallel
         - --template=/usr/local/e2e-openstack-parallel
@@ -1471,7 +1495,11 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.6
         - --give-pr-author-access-to-namespace=true
+        - --org=openshift
+        - --repo=installer
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-ovirt-cluster-profile
         - --target=e2e-ovirt
         - --template=/usr/local/e2e-ovirt
