--- a/ci-operator/jobs/openshift/installer/openshift-installer-release-4.2-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-release-4.2-presubmits.yaml
@@ -507,7 +507,11 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.2
         - --give-pr-author-access-to-namespace=true
+        - --org=openshift
+        - --repo=installer
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-metal-cluster-profile
         - --target=e2e-metal
         - --template=/usr/local/e2e-metal
@@ -566,8 +570,12 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.2
         - --give-pr-author-access-to-namespace=true
         - --lease-server=http://boskos
+        - --org=openshift
+        - --repo=installer
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-openstack-cluster-profile
         - --target=e2e-openstack
         - --template=/usr/local/e2e-openstack
@@ -627,8 +635,12 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.2
         - --give-pr-author-access-to-namespace=true
         - --lease-server=http://boskos
+        - --org=openshift
+        - --repo=installer
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-openstack-parallel-cluster-profile
         - --target=e2e-openstack-parallel
         - --template=/usr/local/e2e-openstack-parallel
