--- a/ci-operator/jobs/openshift/installer/openshift-installer-release-4.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-release-4.3-presubmits.yaml
@@ -638,7 +638,11 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.3
         - --give-pr-author-access-to-namespace=true
+        - --org=openshift
+        - --repo=installer
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-metal-cluster-profile
         - --target=e2e-metal
         - --template=/usr/local/e2e-metal
