ci-operator/jobs/infra-image-mirroring: Bump mirror verbosity
Help troubleshoot failures like [1]:

  E1108 19:07:15.093007      52 mirror.go:721] 400 error updating manifest sha256:e0c285f6f3c8d1ac9c02f5491b1a39e9675fddacdd6ac505c5c987efb9e570b8, checking all references
  sha256:6eef6295a40e1cb7a0713927fa5fb703f3c155addc84929d4b1b0f724e98d363 quay.io/openshift/origin-openshift-controller-manager:latest
  error: unable to push manifest to quay.io/openshift/origin-cluster-monitoring-operator:latest: error parsing HTTP 400 response body: invalid character '<' looking for beginning of value: "<html>\r\n<head><title>400 Bad Request</title></head>\r\n<body bgcolor=\"white\">\r\n<center><h1>400 Bad Request</h1></center>\r\n<hr><center>nginx/1.12.1</center>\r\n</body>\r\n</html>\r\n"

No idea what -v4 will show us, but it's easier to just land it and see
than dig into the code ;).  We can easily tune as we go.

[1]: https://bugzilla.redhat.com/show_bug.cgi?id=1772607

--- a/ci-operator/jobs/infra-image-mirroring.yaml
+++ b/ci-operator/jobs/infra-image-mirroring.yaml
@@ -68,7 +68,7 @@ periodics:
               for mapping in /etc/imagemirror/mapping_origin*; do
                 echo "Running: oc image mirror -f=$mapping --skip-multiple-scopes"
                 if [ ! -s "${mapping}" ]; then continue; fi
-                if ! oc image mirror -a /tmp/config.json -f="$mapping" --skip-multiple-scopes; then
+                if ! oc -v4 image mirror -a /tmp/config.json -f="$mapping" --skip-multiple-scopes; then
                   echo "ERROR: Failed to mirror images from $mapping"
                   failures=$((failures+1))
                 fi
